--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,10 +9,11 @@
 
         <h2>Technologies Used</h2>
         <p>
-            It is all done in Javascript, using Node.js as runtime environment, and these packages:
+            It is all done in Javascript, using Node.js 14.16.0 as runtime environment, and these packages:
             <ul>
                 <li><a href="https://www.npmjs.com/package/body-parser">Body Parser</a>: Parses incoming request bodies</li> 
-                <li><a href="https://www.npmjs.com/package/dotenv">Dotenv</a>: Loads environment variables</li>
+                <li><a href="https://www.npmjs.com/package/dotenv/">Dotenv</a>: Loads environment variables</li>
+                <li><a href="https://ejs.co/">EJS</a>: Embedded Javascript templating</li>
                 <li><a href="https://expressjs.com/">Express.js</a>: Web application framework</li>
                 <li><a href="https://mongoosejs.com/">Mongoose</a>: Object modeling for Node.js</li>
             </ul>
@@ -23,7 +24,6 @@
                 <li>The responsive design is thanks to <a href="https://getbootstrap.com/">Bootstrap</a></li>
                 <li>And the icons are from <a href="https://fontawesome.com/">Font Awesome</a></li>
             </ul>
-            
         </p>
 
         <h2>So, what's next?</h2>
